--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="left-boxes">
         <div class="left-top">
-          <div class="box-1">
+          <div class="box-1 vio box">
             <div class="profile">
               <div class="img-cont">
                 <img src="/images/image-daniel.jpg" alt="Daniel Cifford">
@@ -43,7 +43,7 @@
               Engineer at a VR startup."
             </p>
           </div>
-          <div class="box-2">
+          <div class="box-2 gray box">
             <div class="profile">
               <div class="img-cont">
                 <img src="/images/image-jonathan.jpg" alt="Jonathan Walters">
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="left-bottom">
-          <div class="box-2">
+          <div class="box-2 white box">
             <div class="profile">
               <div class="img-cont">
                 <img src="/images/image-jeanette.jpg" alt="Jeanette Harmon">
@@ -81,7 +81,7 @@
               doing something I love."
             </p>
           </div>
-          <div class="box-1">
+          <div class="box-1 dark-blue box">
             <div class="profile">
               <div class="img-cont">
                 <img src="/images/image-patrick.jpg" alt="Patrick Abrams">
@@ -104,7 +104,7 @@
           </div>
         </div>
       </div>
-      <div class="right-box box-3">
+      <div class="right-box box-3 white box">
         <div class="profile">
           <div class="img-cont">
             <img src="/images/image-kira.jpg" alt="Kira Whittle">
@@ -132,7 +132,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Joy Johon Roy</a>.
     </div>
   </div>
 
